--- a/benefits.html
+++ b/benefits.html
@@ -61,8 +61,8 @@
         <div class="container-fluid">
           <div class="jumbotron jumbotron-fluid" id="bens">
             <div class="container">
-              <h1 class="display-5">Benefits</h1>
-              <p class="lead">Here are the top benefits of switching to a vegetarian diet. It even improves your sex life!</p>
+              <h1 class="display-5 shad">Benefits</h1>
+              <p class="lead shad">Here are the top benefits of switching to a vegetarian diet. It even improves your sex life!</p>
               <a class="btn btn-primary btn-lg" href="recipes.html" role="button">Learn Delicious Recipes</a>
             </div>
           </div>
