--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div class="container-fluid">
           <div class="jumbotron jumbotron-fluid" id="top">
             <div class="container">
-              <h1 class="display-5">Vegetarianism? Why Not?</h1>
-              <p class="lead">Let me try to convince you to stop eating meat. Only you can determine if and when you are ready to be a vegetarian. Here is the basic information you need to know.</p>
+              <h1 class="display-5 shad">Vegetarianism? Why Not?</h1>
+              <p class="lead shad">Let me try to convince you to stop eating meat. Only you can determine if and when you are ready to be a vegetarian. Here is the basic information you need to know.</p>
               <p class="lead">
                 <a class="btn btn-primary btn-lg" href="benefits.html" role="button">Learn the Benefits</a>
               </p>
