--- a/recipes.html
+++ b/recipes.html
@@ -62,7 +62,7 @@
         <div class="container-fluid">
           <div class="jumbotron jumbotron-fluid" id="reps">
             <div class="container">
-              <h1 class="display-5">Recipes to Live By...</h1>
+              <h1 class="display-5 shad">Recipes to Live By...</h1>
               <!--<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>-->
             </div>
           </div>
